# webinar

./: .env.sample  .eslintrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  mkdocs.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  tasks.py  webpack.config.js
.github/workflows/: gh-pages.yml  main.yml
docker/db/: Dockerfile  create.sql
docs/: architecture.md  configuration.md  deployment.md  frontend.md  index.md  introduction.md  maintenance.md  project-structure.md  references.md
docs/images/: architecture.excalidraw
webinar/: urls.py  wsgi.py
webinar/assets/css/: gfm.min.css
webinar/assets/js/: main.js
webinar/assets/scss/: main.scss
webinar/core/: apps.py  forms.py  mail.py  models.py  notifications.py
webinar/core/migrations/: 0001_initial.py
webinar/core/templates/core/: webinar_registration_notification_email.txt
webinar/core/templatetags/: core_tags.py
webinar/core/tests/: test_mail.py
webinar/home/: apps.py  views.py
webinar/home/templates/home/: home_page.html
webinar/settings/: base.py  dev.py  production.py
webinar/templates/: 400.html  403.html  404.html  500.html  base.html
webinar/templates/includes/: footer.html  navbar.html
webinar/users/: admin.py  apps.py
webinar/users/tests/: test_factories.py
